# SLog

./: CMakeLists.txt  CMakePresets.json  README.md  VERSION
benchmarks/: CMakeLists.txt  benchmark.cpp
cmake/: tools.cmake
docs/: CMakeLists.txt  Doxyfile  conf.py
docs/pages/: about.dox
examples/: CMakeLists.txt  demo.cpp
include/slog/: reporter.hpp  slog.hpp  typename.hpp
src/: reporter.cpp
tests/: CMakeLists.txt  slog.cpp
